--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
 				<nav class="codrops-demos">
 					<a href="https://bem-aqui-no-inpi.github.io/estrategias" target="_blank">Estratégias</a>
 					<a href="https://bem-aqui-no-inpi.github.io/objetivos" target="_blank">Objetivos</a>
+					<a href="https://bem-aqui-no-inpi.github.io/agenda" target="_blank">Agenda</a>
 				</nav>
 			</header>
 			<div class="content">
