--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 				<h1>Programa<br>Bem Aqui no INPI<span>Programa Motivacional e de Endomarketing<br>do Instituto Nacional da Propriedade Industrial</span></h1>
 				<nav class="codrops-demos">
 					<a href="https://bem-aqui-no-inpi.github.io/estrategias" target="_blank">Estratégias</a>
+					<a href="https://bem-aqui-no-inpi.github.io/objetivos" target="_blank">Objetivos</a>
 					<a href="https://bem-aqui-no-inpi.github.io/agenda" target="_blank">Agenda</a>
 				</nav>
 			</header>
